[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/ManagementNode.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsNormal.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsClicked.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsHover.png" type="Texture" id=4]

[node name="ManagementNode" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Selection" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="Party" type="TextureButton" parent="Selection"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 5.0
margin/right = 20.0
margin/bottom = 5.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="Repair" type="TextureButton" parent="Selection"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 19.0
margin/right = 20.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="Shop" type="TextureButton" parent="Selection"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 34.0
margin/right = 20.0
margin/bottom = 34.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="PartyMenu" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="ManageMembers" type="TextureButton" parent="PartyMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 9.0
margin/right = 20.0
margin/bottom = 9.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="ManageItems" type="TextureButton" parent="PartyMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 20.0
margin/top = 31.0
margin/right = 20.0
margin/bottom = 31.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="UnitManagement" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 0.0

[node name="ActiveParty" type="ItemList" parent="UnitManagement"]

rect/min_size = Vector2( 70, 70 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 110.0
margin/bottom = 110.0
custom_constants/icon_margin = -5
custom_constants/hseparation = 20

[node name="Barracks" type="ItemList" parent="UnitManagement"]

rect/min_size = Vector2( 70, 70 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 660.0
margin/top = 40.0
margin/right = 730.0
margin/bottom = 110.0
custom_constants/icon_margin = -5
custom_constants/hseparation = 20

[node name="Swap" type="TextureButton" parent="UnitManagement"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 403.0
margin/right = 600.0
margin/bottom = 583.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 3 )

[connection signal="pressed" from="UnitManagement/Swap" to="." method="_on_Swap_pressed"]


